--- a/gather.Rmd
+++ b/gather.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Gather"
+title: "Data Wrangling"
 author: "Emma Freeman"
 date: "2/27/2020"
 output: html_document
@@ -70,6 +70,12 @@ data_2012 <- read_csv("raw-data//2012_college_data.csv") %>%
   clean_names()
 names(data_2012) <- str_replace_all(names(data_2012), "^[^_]*_", "")
 names(data_2012) <- str_replace_all(names(data_2012), "_of_undergraduate_enrollment_that_are", "")
+
+# For an unknown reason, the level of institution variable was named
+# differently than the other data sets. I found this out when I 
+# attempted to join this dataset with the other data. This was 
+# easily fixed by changing the name of the column
+
 names(data_2012) <- str_replace(names(data_2012), "sector_of_institution", "level_of_institution")
 
 data_2011 <- read_csv("raw-data//2011_college_data.csv") %>%
@@ -91,40 +97,6 @@ names(data_2009) <- str_replace_all(names(data_2009), "^[^_]*_", "")
 names(data_2009) <- str_replace_all(names(data_2009), "1_", "")
 names(data_2009) <- str_replace_all(names(data_2009), "_of_undergraduate_enrollment_that_are", "")
 
-# This in the data from census.gov that contains the racial makeup 
-# of different states using the 2010 census data. It has a very 
-# different format than the other data from NCES. As such, I had to 
-# manually assign data types for the columns. 
-census_data <- read_csv("raw-data//census_data.csv", col_types = 
-                          cols(NAME = col_character(),
-                               SEX = col_character(),
-                               ORIGIN = col_character(),
-                               RACE = col_character(),
-                               AGE = col_double(),
-                               CENSUS2010POP = col_double())) %>%
-  
-  # clean_names() basically functioned in the same way that the tolower() function would work in this case 
-  
-  clean_names() %>% 
-  
-  # I selected the pertinent variables and disregarded the others.
-  
-  select(name, sex, origin, race, age, census2010pop)
-
-# The census data is very obscure without the key. Each column is 
-# made up of a certain set of numbers that act as categorical 
-# variables. I used the key provided on the Census website to make 
-# names of the observations more closely mimic the column names of 
-# the other datasets to make joining easier. I suspect, however,
-# that I will have to do sufficient arithmetic and pivoting to make 
-# a join between this data set and any of the others possible. At 
-# this point, however, I do not anticipate having to join this data so have left it as is. 
-
-census_data <- census_data %>%
-  mutate(sex = str_replace_all(sex, c("0" = "Total", "1" = "Male", "2" = "Female"))) %>%
-  mutate(origin = str_replace_all(origin, c("0" = "Total", "1" = "Not Hispanic", "2" = "Hispanic"))) %>%
-  mutate(race = str_replace_all(race, c("1" = "White", "2"= "Black or African American", "3" = "American Indican or Alaskan Native", "4" = "Asian", "5" = "Native Hawaiian or Pacific Islander", "6" = "Two or More Races")))
- 
 ```
 
 ```{r, include = TRUE}
@@ -155,6 +127,12 @@ join_data <- function(x, y) {
   "level_of_institution", "degree_of_urbanization_urban_centric_locale", 
   "percent_asian_native_hawaiian_pacific_islander")) 
 }
+
+# I used the function written above to combine all of the datasets
+# except for the 2009 dataset which contains different variables and # information. I will have to decide if adapting the 2009 data will
+# be worth it because there are fewer variables included in the 2009
+# data.
+
 joined_data <- join_data(data_2018, data_2017)
 joined_data <- join_data(joined_data, data_2016)
 joined_data <- join_data(joined_data, data_2015)
@@ -168,20 +146,21 @@ joined_data <- join_data(joined_data, data_2010)
 
 ```{r}
 
-m10 <- get_decennial(geography = "state", variables = "H001001", year = 2010, geometry = TRUE)
-state_data <- full_join(m10, joined_data, by = c("NAME" = "state_abbreviation"))
+# Last week, I was going to use the census data I had downloaded
+# censusdata.gov. Instead I have decided to use the 2010 census data
+# included with the tidycensus package because it includes the 
+# geometry for map plots.
 
-african_american <- state_data %>%
-  group_by(NAME) %>%
-  mutate(african_american_mean = mean(percent_black_or_african_american, na.rm = TRUE)) %>%
-  filter(year == 2018)
+census_data <- get_decennial(geography = "state", 
+                             variables = c(
+                               total_pop = "H006001",
+                               pop_white = "H006002",
+                               pop_african_american = "H006003",
+                               pop_native_american_alaskan = "H006004", 
+                               pop_asian = "H006005",  pop_native_hawaiian_pacific_islander = "H006006", 
+                               pop_other = "H006007", pop_two_or_more_races = "H006008"), 
+                             year = 2010, 
+                             geometry = TRUE)
 
-african_american %>%
-  ggplot() +
-  geom_sf(aes(geometry = geometry))
-
-
-
-    
 ```
 
