--- a/ms_3.Rmd
+++ b/ms_3.Rmd
@@ -11,7 +11,7 @@ This project aims to determine the factors that contribute to the racial and eth
 Furthermore, in additional study of the data, I hope to be able to isolate specific institutions (specifically Ivy League schools) and evaluate the diversity trends especially in response to the recent lawsuit. 
 
 ## Data
-To accomplish the goal of this project, I have amassed data sets from each year that contain information about almost 7,00 institutions in the continental United States. Each data set contains the information about these institutions in a specific year, and I have collected the data sets from 2009 to 2018. These data sets all come from nces.ed.gov (the Nation Center for Education Statistics).
+To accomplish the goal of this project, I have amassed data sets from each year that contain information about almost 7,00 institutions in the continental United States. Each data set contains the information about these institutions in a specific year, and I have collected the data sets from 2009 to 2018. These data sets all come from nces.ed.gov (the National Center for Education Statistics).
 
 In addition to these data sets, I have loaded race data from the tidycensus r package in order to compare the mean racial diversity of a set of institutions in a particular state to the general degree of diversity in that state.
 
