--- a/gather.Rmd
+++ b/gather.Rmd
@@ -7,7 +7,6 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
-knitr::opts_chunk$set(include = FALSE)
 
 # These libraries are required in order to run the code in the following r chunks. 
 
@@ -17,6 +16,8 @@ library(readr)
 library(janitor)
 library(stringr)
 library(tidycensus)
+library(forcats)
+library(ggthemes)
 
 ```
 
@@ -144,7 +145,7 @@ joined_data <- join_data(joined_data, data_2010)
 
 ```
 
-```{r}
+```{r, include = FALSE}
 
 # Last week, I was going to use the census data I had downloaded
 # censusdata.gov. Instead I have decided to use the 2010 census data
@@ -158,9 +159,60 @@ census_data <- get_decennial(geography = "state",
                                pop_african_american = "H006003",
                                pop_native_american_alaskan = "H006004", 
                                pop_asian = "H006005",  pop_native_hawaiian_pacific_islander = "H006006", 
-                               pop_other = "H006007", pop_two_or_more_races = "H006008"), 
+                               pop_other = "H006007", 
+                               pop_two_or_more_races = "H006008"), 
                              year = 2010, 
                              geometry = TRUE)
 
+census_data_2 <- get_acs(geography = "us", 
+                         variables = c(
+                           total_pop = "B01001_001",
+                           pop_white = "B01001A_001",
+                           pop_african_american = "B01001B_001",
+                           pop_native_american_alaskan = "B01001C_001",
+                           pop_asian = "B01001D_001",
+                           pop_native_hawaiian_pacific_islander = "B01001E_001",
+                           pop_other = "B01001F_001",
+                           pop_two_or_more_races = "B01001G_001"),
+                         year = 2010) 
+
+census_data_2 <- census_data_2 %>%
+  select(variable, estimate) %>%
+  pivot_wider(names_from = variable, values_from = estimate) %>%
+  mutate(pct_white = (pop_white / total_pop) * 100) %>%
+  mutate(pct_african_american = (pop_african_american / total_pop) * 100) %>%
+  mutate(pct_native_american_alaskan = (pop_native_american_alaskan / total_pop) * 100) %>%
+  mutate(pct_asian = (pop_asian / total_pop) * 100) %>%
+  mutate(pct_native_hawaiian_pacific_islander = (pop_native_hawaiian_pacific_islander / total_pop) * 100) %>%
+  mutate(pct_other = (pop_other / total_pop) * 100) %>%
+  mutate(pct_two_or_more_races = (pop_two_or_more_races / total_pop) * 100)
+
+```
+
+
+```{r}
+reduced_size_2018 <- data_2018 %>%
+  mutate(institution_size_category = factor(institution_size_category,
+                                            levels = c("Under 1,000",
+                                                       "1,000 - 4,999",
+                                                       "5,000 - 4,999", 
+                                                       "10,000 - 19,999",
+                                                       "20,000 and above",
+                                                       "Not applicable",
+                                                       "Not reported"))) %>%
+  filter(institution_size_category != "Not applicable" & institution_size_category != "Not reported") 
+  
+aa_plot_2018 <- reduced_size_2018 %>%
+  filter(!is.na(percent_black_or_african_american)) %>%
+  ggplot(aes(x = as_factor(institution_size_category), y = percent_black_or_african_american)) +
+  geom_boxplot(alpha = 0.25) +
+  xlab("Size of Institution") + 
+  ylab("Percent Black or African American") +
+  theme_tufte() + 
+  labs(title = "Percent of Black or African Students by Size of Institution",
+       subtitle = "With comparison at national population estimate") +
+  theme(axis.line = element_line()) +
+  geom_hline(yintercept = census_data_2$pct_african_american, color = "red")
+size_plot_2018
 ```
 
