added link to repo for canvas turn in

--- a/ms_5.Rmd
+++ b/ms_5.Rmd
@@ -19,6 +19,9 @@ library(forcats)
 library(ggthemes)
 ```
 
+Link to repo: https://github.com/emfree19/final_project
+
+
 ```{r data wrangling, include = FALSE}
 
 # I made this include = FALSE to remove the pop ups included with the reading 
