playing around with sidebar

--- a/ms_5.Rmd
+++ b/ms_5.Rmd
@@ -116,4 +116,34 @@ aa_plot_2018 <- size_2018 %>%
   geom_hline(yintercept = census_data_2$pct_african_american, color = "red")
 aa_plot_2018
 ```
+```{r}
+asian_plot_2018 <- size_2018 %>%
+  
+  # This removes any NA observations in order to remove the message about the
+  # removal of NA observations that occurs when the geom_boxplot() is used
+  
+  filter(!is.na(percent_black_or_african_american)) %>%
+  ggplot(aes(x = as_factor(institution_size_category), y = percent_asian)) +
+  
+  # This shows the decreasing number of items toward the extremes 
+  
+  geom_boxplot(alpha = 0.25) +
+  xlab("Size of Institution") + 
+  ylab("Percent Asian") +
+  
+  # I will use them_tufte going forward, so that my final project appears 
+  # consistent
+  
+  theme_tufte() + 
+  labs(title = "Percent of Asian Students by Size of Institution",
+       subtitle = "With comparison at national population estimate") +
+  theme(axis.line = element_line()) +
+  
+  # This gives the national estimate for the percentage of the population that 
+  # is African American, offering a comparison for the level of representation 
+  # in schools 
+  
+  geom_hline(yintercept = census_data_2$pct_asian, color = "red")
+asian_plot_2018
+```
 
